@@ -8,11 +8,11 @@
 # See the file "COPYING" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# @(#) $Id: configure.in,v 1.11 1999/06/01 19:43:46 strauss Exp $
+# @(#) $Id: configure.in,v 1.12 1999/06/02 16:52:30 strauss Exp $
 #
 
 AC_INIT(tools/smilint.c)
-AM_INIT_AUTOMAKE(libsmi,0.1.1)
+AM_INIT_AUTOMAKE(libsmi,0.1.2)
 # Note: also increase shlib version version lib/Makefile.am:libsmi_la_LDFLAGS ?
 
 AC_DEFINE(BACKEND_SMI)
